src/cuda-sim/ptx.output
Terminals unused in grammar

   BRANCHTARGETS_DIRECTIVE
   BYTE_DIRECTIVE
   CALLPROTOTYPE_DIRECTIVE
   CALLTARGETS_DIRECTIVE
   MAXNNREG_DIRECTIVE
   REQNTID_DIRECTIVE
   SECTION_DIRECTIVE
   STRUCT_DIRECTIVE
   UNION_DIRECTIVE
   PERIOD


State 51 conflicts: 1 reduce/reduce
State 293 conflicts: 1 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input directive_statement
    3      | input function_defn
    4      | input function_decl

    5 $@1: /* empty */

    6 function_defn: function_decl $@1 statement_block

    7 $@2: /* empty */

    8 $@3: /* empty */

    9 function_defn: function_decl $@2 block_spec_list $@3 statement_block

   10 block_spec: MAXNTID_DIRECTIVE INT_OPERAND COMMA INT_OPERAND COMMA INT_OPERAND
   11           | MINNCTAPERSM_DIRECTIVE INT_OPERAND
   12           | MAXNCTAPERSM_DIRECTIVE INT_OPERAND

   13 block_spec_list: block_spec
   14                | block_spec_list block_spec

   15 $@4: /* empty */

   16 $@5: /* empty */

   17 function_decl: function_decl_header LEFT_PAREN $@4 param_entry RIGHT_PAREN $@5 function_ident_param

   18 $@6: /* empty */

   19 function_decl: function_decl_header $@6 function_ident_param
   20              | function_decl_header

   21 $@7: /* empty */

   22 $@8: /* empty */

   23 function_ident_param: IDENTIFIER $@7 LEFT_PAREN $@8 param_list RIGHT_PAREN
   24                     | IDENTIFIER

   25 function_decl_header: ENTRY_DIRECTIVE
   26                     | FUNC_DIRECTIVE
   27                     | VISIBLE_DIRECTIVE FUNC_DIRECTIVE
   28                     | EXTERN_DIRECTIVE FUNC_DIRECTIVE

   29 param_list: /* empty */
   30           | param_entry

   31 $@9: /* empty */

   32 param_list: param_list COMMA $@9 param_entry

   33 $@10: /* empty */

   34 param_entry: PARAM_DIRECTIVE $@10 variable_spec ptr_spec identifier_spec

   35 $@11: /* empty */

   36 param_entry: REG_DIRECTIVE $@11 variable_spec identifier_spec

   37 ptr_spec: /* empty */
   38         | PTR_DIRECTIVE ptr_space_spec ptr_align_spec
   39         | PTR_DIRECTIVE ptr_align_spec

   40 ptr_space_spec: GLOBAL_DIRECTIVE
   41               | LOCAL_DIRECTIVE
   42               | SHARED_DIRECTIVE

   43 ptr_align_spec: ALIGN_DIRECTIVE INT_OPERAND

   44 statement_block: LEFT_BRACE statement_list RIGHT_BRACE

   45 statement_list: directive_statement
   46               | instruction_statement
   47               | statement_list directive_statement
   48               | statement_list instruction_statement
   49               | statement_list statement_block
   50               | statement_block

   51 directive_statement: variable_declaration SEMI_COLON
   52                    | VERSION_DIRECTIVE DOUBLE_OPERAND
   53                    | VERSION_DIRECTIVE DOUBLE_OPERAND PLUS
   54                    | ADDRESS_SIZE_DIRECTIVE INT_OPERAND
   55                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER
   56                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   57                    | TARGET_DIRECTIVE IDENTIFIER
   58                    | FILE_DIRECTIVE INT_OPERAND STRING
   59                    | LOC_DIRECTIVE INT_OPERAND INT_OPERAND INT_OPERAND
   60                    | PRAGMA_DIRECTIVE STRING SEMI_COLON
   61                    | function_decl SEMI_COLON
   62                    | MINNCTAPERSM_DIRECTIVE INT_OPERAND

   63 variable_declaration: variable_spec identifier_list
   64                     | variable_spec identifier_spec EQUALS initializer_list
   65                     | variable_spec identifier_spec EQUALS literal_operand
   66                     | CONSTPTR_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

   67 variable_spec: var_spec_list

   68 identifier_list: identifier_spec
   69                | identifier_list COMMA identifier_spec

   70 identifier_spec: IDENTIFIER
   71                | IDENTIFIER LEFT_ANGLE_BRACKET INT_OPERAND RIGHT_ANGLE_BRACKET
   72                | IDENTIFIER LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   73                | IDENTIFIER LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET

   74 var_spec_list: var_spec
   75              | var_spec_list var_spec

   76 var_spec: space_spec
   77         | type_spec
   78         | align_spec
   79         | EXTERN_DIRECTIVE

   80 align_spec: ALIGN_DIRECTIVE INT_OPERAND

   81 space_spec: REG_DIRECTIVE
   82           | SREG_DIRECTIVE
   83           | addressable_spec

   84 addressable_spec: CONST_DIRECTIVE
   85                 | GLOBAL_DIRECTIVE
   86                 | LOCAL_DIRECTIVE
   87                 | PARAM_DIRECTIVE
   88                 | SHARED_DIRECTIVE
   89                 | SURF_DIRECTIVE
   90                 | TEX_DIRECTIVE

   91 type_spec: scalar_type
   92          | vector_spec scalar_type

   93 vector_spec: V2_TYPE
   94            | V3_TYPE
   95            | V4_TYPE

   96 scalar_type: S8_TYPE
   97            | S16_TYPE
   98            | S32_TYPE
   99            | S64_TYPE
  100            | U8_TYPE
  101            | U16_TYPE
  102            | U32_TYPE
  103            | U64_TYPE
  104            | F16_TYPE
  105            | F32_TYPE
  106            | F64_TYPE
  107            | FF64_TYPE
  108            | B8_TYPE
  109            | B16_TYPE
  110            | B32_TYPE
  111            | B64_TYPE
  112            | BB64_TYPE
  113            | BB128_TYPE
  114            | PRED_TYPE
  115            | TEXREF_TYPE
  116            | SAMPLERREF_TYPE
  117            | SURFREF_TYPE

  118 initializer_list: LEFT_BRACE literal_list RIGHT_BRACE
  119                 | LEFT_BRACE initializer_list RIGHT_BRACE

  120 literal_list: literal_operand
  121             | literal_list COMMA literal_operand

  122 instruction_statement: instruction SEMI_COLON
  123                      | IDENTIFIER COLON
  124                      | pred_spec instruction SEMI_COLON

  125 $@12: /* empty */

  126 instruction: opcode_spec LEFT_PAREN operand RIGHT_PAREN $@12 COMMA operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  127            | opcode_spec operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  128            | opcode_spec operand COMMA LEFT_PAREN RIGHT_PAREN
  129            | opcode_spec operand_list
  130            | opcode_spec

  131 $@13: /* empty */

  132 opcode_spec: OPCODE $@13 option_list
  133            | OPCODE

  134 pred_spec: PRED IDENTIFIER
  135          | PRED EXCLAMATION IDENTIFIER
  136          | PRED IDENTIFIER LT_OPTION
  137          | PRED IDENTIFIER EQ_OPTION
  138          | PRED IDENTIFIER LE_OPTION
  139          | PRED IDENTIFIER NE_OPTION
  140          | PRED IDENTIFIER GE_OPTION
  141          | PRED IDENTIFIER EQU_OPTION
  142          | PRED IDENTIFIER GTU_OPTION
  143          | PRED IDENTIFIER NEU_OPTION
  144          | PRED IDENTIFIER CF_OPTION
  145          | PRED IDENTIFIER SF_OPTION
  146          | PRED IDENTIFIER NSF_OPTION

  147 option_list: option
  148            | option option_list

  149 option: type_spec
  150       | compare_spec
  151       | addressable_spec
  152       | rounding_mode
  153       | UNI_OPTION
  154       | WIDE_OPTION
  155       | ANY_OPTION
  156       | ALL_OPTION
  157       | BALLOT_OPTION
  158       | GLOBAL_OPTION
  159       | CTA_OPTION
  160       | SYS_OPTION
  161       | GEOM_MODIFIER_1D
  162       | GEOM_MODIFIER_2D
  163       | GEOM_MODIFIER_3D
  164       | SAT_OPTION
  165       | FTZ_OPTION
  166       | NEG_OPTION
  167       | APPROX_OPTION
  168       | FULL_OPTION
  169       | EXIT_OPTION
  170       | ABS_OPTION
  171       | atomic_operation_spec
  172       | TO_OPTION
  173       | HALF_OPTION
  174       | CA_OPTION
  175       | CG_OPTION
  176       | CS_OPTION
  177       | LU_OPTION
  178       | CV_OPTION
  179       | WB_OPTION
  180       | WT_OPTION

  181 atomic_operation_spec: ATOMIC_AND
  182                      | ATOMIC_OR
  183                      | ATOMIC_XOR
  184                      | ATOMIC_CAS
  185                      | ATOMIC_EXCH
  186                      | ATOMIC_ADD
  187                      | ATOMIC_INC
  188                      | ATOMIC_DEC
  189                      | ATOMIC_MIN
  190                      | ATOMIC_MAX

  191 rounding_mode: floating_point_rounding_mode
  192              | integer_rounding_mode

  193 floating_point_rounding_mode: RN_OPTION
  194                             | RZ_OPTION
  195                             | RM_OPTION
  196                             | RP_OPTION

  197 integer_rounding_mode: RNI_OPTION
  198                      | RZI_OPTION
  199                      | RMI_OPTION
  200                      | RPI_OPTION

  201 compare_spec: EQ_OPTION
  202             | NE_OPTION
  203             | LT_OPTION
  204             | LE_OPTION
  205             | GT_OPTION
  206             | GE_OPTION
  207             | LO_OPTION
  208             | LS_OPTION
  209             | HI_OPTION
  210             | HS_OPTION
  211             | EQU_OPTION
  212             | NEU_OPTION
  213             | LTU_OPTION
  214             | LEU_OPTION
  215             | GTU_OPTION
  216             | GEU_OPTION
  217             | NUM_OPTION
  218             | NAN_OPTION

  219 operand_list: operand
  220             | operand COMMA operand_list

  221 operand: IDENTIFIER
  222        | EXCLAMATION IDENTIFIER
  223        | MINUS IDENTIFIER
  224        | memory_operand
  225        | literal_operand
  226        | builtin_operand
  227        | vector_operand
  228        | MINUS vector_operand
  229        | tex_operand
  230        | IDENTIFIER PLUS INT_OPERAND
  231        | IDENTIFIER LO_OPTION
  232        | MINUS IDENTIFIER LO_OPTION
  233        | IDENTIFIER HI_OPTION
  234        | MINUS IDENTIFIER HI_OPTION
  235        | IDENTIFIER PIPE IDENTIFIER
  236        | IDENTIFIER PIPE IDENTIFIER LO_OPTION
  237        | IDENTIFIER PIPE IDENTIFIER HI_OPTION
  238        | IDENTIFIER BACKSLASH IDENTIFIER
  239        | IDENTIFIER BACKSLASH IDENTIFIER LO_OPTION
  240        | IDENTIFIER BACKSLASH IDENTIFIER HI_OPTION

  241 vector_operand: LEFT_BRACE IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  242               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  243               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  244               | LEFT_BRACE IDENTIFIER RIGHT_BRACE

  245 $@14: /* empty */

  246 tex_operand: LEFT_SQUARE_BRACKET IDENTIFIER COMMA $@14 vector_operand RIGHT_SQUARE_BRACKET

  247 builtin_operand: SPECIAL_REGISTER DIMENSION_MODIFIER
  248                | SPECIAL_REGISTER

  249 memory_operand: LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  250               | IDENTIFIER LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  251               | IDENTIFIER LEFT_SQUARE_BRACKET literal_operand RIGHT_SQUARE_BRACKET
  252               | IDENTIFIER LEFT_SQUARE_BRACKET twin_operand RIGHT_SQUARE_BRACKET
  253               | MINUS memory_operand

  254 twin_operand: IDENTIFIER PLUS IDENTIFIER
  255             | IDENTIFIER PLUS IDENTIFIER LO_OPTION
  256             | IDENTIFIER PLUS IDENTIFIER HI_OPTION
  257             | IDENTIFIER PLUS EQUALS IDENTIFIER
  258             | IDENTIFIER PLUS EQUALS IDENTIFIER LO_OPTION
  259             | IDENTIFIER PLUS EQUALS IDENTIFIER HI_OPTION
  260             | IDENTIFIER PLUS EQUALS INT_OPERAND

  261 literal_operand: INT_OPERAND
  262                | FLOAT_OPERAND
  263                | DOUBLE_OPERAND

  264 address_expression: IDENTIFIER
  265                   | IDENTIFIER LO_OPTION
  266                   | IDENTIFIER HI_OPTION
  267                   | IDENTIFIER PLUS INT_OPERAND
  268                   | INT_OPERAND


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 58 60
OPCODE (259) 132 133
ALIGN_DIRECTIVE (260) 43 80
BRANCHTARGETS_DIRECTIVE (261)
BYTE_DIRECTIVE (262)
CALLPROTOTYPE_DIRECTIVE (263)
CALLTARGETS_DIRECTIVE (264)
CONST_DIRECTIVE (265) 84
CONSTPTR_DIRECTIVE (266) 66
PTR_DIRECTIVE (267) 38 39
ENTRY_DIRECTIVE (268) 25
EXTERN_DIRECTIVE (269) 28 79
FILE_DIRECTIVE (270) 58
FUNC_DIRECTIVE (271) 26 27 28
GLOBAL_DIRECTIVE (272) 40 85
LOCAL_DIRECTIVE (273) 41 86
LOC_DIRECTIVE (274) 59
MAXNCTAPERSM_DIRECTIVE (275) 12
MAXNNREG_DIRECTIVE (276)
MAXNTID_DIRECTIVE (277) 10
MINNCTAPERSM_DIRECTIVE (278) 11 62
PARAM_DIRECTIVE (279) 34 87
PRAGMA_DIRECTIVE (280) 60
REG_DIRECTIVE (281) 36 81
REQNTID_DIRECTIVE (282)
SECTION_DIRECTIVE (283)
SHARED_DIRECTIVE (284) 42 88
SREG_DIRECTIVE (285) 82
STRUCT_DIRECTIVE (286)
SURF_DIRECTIVE (287) 89
TARGET_DIRECTIVE (288) 55 56 57
TEX_DIRECTIVE (289) 90
UNION_DIRECTIVE (290)
VERSION_DIRECTIVE (291) 52 53
ADDRESS_SIZE_DIRECTIVE (292) 54
VISIBLE_DIRECTIVE (293) 27
IDENTIFIER (294) 23 24 55 56 57 66 70 71 72 73 123 134 135 136 137
    138 139 140 141 142 143 144 145 146 221 222 223 230 231 232 233
    234 235 236 237 238 239 240 241 242 243 244 246 250 251 252 254
    255 256 257 258 259 260 264 265 266 267
INT_OPERAND (295) 10 11 12 43 54 58 59 62 66 71 73 80 230 260 261 267
    268
FLOAT_OPERAND (296) 262
DOUBLE_OPERAND (297) 52 53 263
S8_TYPE (298) 96
S16_TYPE (299) 97
S32_TYPE (300) 98
S64_TYPE (301) 99
U8_TYPE (302) 100
U16_TYPE (303) 101
U32_TYPE (304) 102
U64_TYPE (305) 103
F16_TYPE (306) 104
F32_TYPE (307) 105
F64_TYPE (308) 106
FF64_TYPE (309) 107
B8_TYPE (310) 108
B16_TYPE (311) 109
B32_TYPE (312) 110
B64_TYPE (313) 111
BB64_TYPE (314) 112
BB128_TYPE (315) 113
PRED_TYPE (316) 114
TEXREF_TYPE (317) 115
SAMPLERREF_TYPE (318) 116
SURFREF_TYPE (319) 117
V2_TYPE (320) 93
V3_TYPE (321) 94
V4_TYPE (322) 95
COMMA (323) 10 32 55 56 66 69 121 126 127 128 220 241 242 243 246
PRED (324) 134 135 136 137 138 139 140 141 142 143 144 145 146
HALF_OPTION (325) 173
EQ_OPTION (326) 137 201
NE_OPTION (327) 139 202
LT_OPTION (328) 136 203
LE_OPTION (329) 138 204
GT_OPTION (330) 205
GE_OPTION (331) 140 206
LO_OPTION (332) 207 231 232 236 239 255 258 265
LS_OPTION (333) 208
HI_OPTION (334) 209 233 234 237 240 256 259 266
HS_OPTION (335) 210
EQU_OPTION (336) 141 211
NEU_OPTION (337) 143 212
LTU_OPTION (338) 213
LEU_OPTION (339) 214
GTU_OPTION (340) 142 215
GEU_OPTION (341) 216
NUM_OPTION (342) 217
NAN_OPTION (343) 218
CF_OPTION (344) 144
SF_OPTION (345) 145
NSF_OPTION (346) 146
LEFT_SQUARE_BRACKET (347) 72 73 246 249 250 251 252
RIGHT_SQUARE_BRACKET (348) 72 73 246 249 250 251 252
WIDE_OPTION (349) 154
SPECIAL_REGISTER (350) 247 248
MINUS (351) 223 228 232 234 253
PLUS (352) 53 230 254 255 256 257 258 259 260 267
COLON (353) 123
SEMI_COLON (354) 51 60 61 122 124
EXCLAMATION (355) 135 222
PIPE (356) 235 236 237
RIGHT_BRACE (357) 44 118 119 241 242 243 244
LEFT_BRACE (358) 44 118 119 241 242 243 244
EQUALS (359) 64 65 257 258 259 260
PERIOD (360)
BACKSLASH (361) 238 239 240
DIMENSION_MODIFIER (362) 247
RN_OPTION (363) 193
RZ_OPTION (364) 194
RM_OPTION (365) 195
RP_OPTION (366) 196
RNI_OPTION (367) 197
RZI_OPTION (368) 198
RMI_OPTION (369) 199
RPI_OPTION (370) 200
UNI_OPTION (371) 153
GEOM_MODIFIER_1D (372) 161
GEOM_MODIFIER_2D (373) 162
GEOM_MODIFIER_3D (374) 163
SAT_OPTION (375) 164
FTZ_OPTION (376) 165
NEG_OPTION (377) 166
ATOMIC_AND (378) 181
ATOMIC_OR (379) 182
ATOMIC_XOR (380) 183
ATOMIC_CAS (381) 184
ATOMIC_EXCH (382) 185
ATOMIC_ADD (383) 186
ATOMIC_INC (384) 187
ATOMIC_DEC (385) 188
ATOMIC_MIN (386) 189
ATOMIC_MAX (387) 190
LEFT_ANGLE_BRACKET (388) 71
RIGHT_ANGLE_BRACKET (389) 71
LEFT_PAREN (390) 17 23 126 127 128
RIGHT_PAREN (391) 17 23 126 127 128
APPROX_OPTION (392) 167
FULL_OPTION (393) 168
ANY_OPTION (394) 155
ALL_OPTION (395) 156
BALLOT_OPTION (396) 157
GLOBAL_OPTION (397) 158
CTA_OPTION (398) 159
SYS_OPTION (399) 160
EXIT_OPTION (400) 169
ABS_OPTION (401) 170
TO_OPTION (402) 172
CA_OPTION (403) 174
CG_OPTION (404) 175
CS_OPTION (405) 176
LU_OPTION (406) 177
CV_OPTION (407) 178
WB_OPTION (408) 179
WT_OPTION (409) 180


Nonterminals, with rules where they appear

$accept (155)
    on left: 0
input (156)
    on left: 1 2 3 4, on right: 0 2 3 4
function_defn (157)
    on left: 6 9, on right: 3
$@1 (158)
    on left: 5, on right: 6
$@2 (159)
    on left: 7, on right: 9
$@3 (160)
    on left: 8, on right: 9
block_spec (161)
    on left: 10 11 12, on right: 13 14
block_spec_list (162)
    on left: 13 14, on right: 9 14
function_decl (163)
    on left: 17 19 20, on right: 4 6 9 61
$@4 (164)
    on left: 15, on right: 17
$@5 (165)
    on left: 16, on right: 17
$@6 (166)
    on left: 18, on right: 19
function_ident_param (167)
    on left: 23 24, on right: 17 19
$@7 (168)
    on left: 21, on right: 23
$@8 (169)
    on left: 22, on right: 23
function_decl_header (170)
    on left: 25 26 27 28, on right: 17 19 20
param_list (171)
    on left: 29 30 32, on right: 23 32
$@9 (172)
    on left: 31, on right: 32
param_entry (173)
    on left: 34 36, on right: 17 30 32
$@10 (174)
    on left: 33, on right: 34
$@11 (175)
    on left: 35, on right: 36
ptr_spec (176)
    on left: 37 38 39, on right: 34
ptr_space_spec (177)
    on left: 40 41 42, on right: 38
ptr_align_spec (178)
    on left: 43, on right: 38 39
statement_block (179)
    on left: 44, on right: 6 9 49 50
statement_list (180)
    on left: 45 46 47 48 49 50, on right: 44 47 48 49
directive_statement (181)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62, on right: 2 45 47
variable_declaration (182)
    on left: 63 64 65 66, on right: 51
variable_spec (183)
    on left: 67, on right: 34 36 63 64 65
identifier_list (184)
    on left: 68 69, on right: 63 69
identifier_spec (185)
    on left: 70 71 72 73, on right: 34 36 64 65 68 69
var_spec_list (186)
    on left: 74 75, on right: 67 75
var_spec (187)
    on left: 76 77 78 79, on right: 74 75
align_spec (188)
    on left: 80, on right: 78
space_spec (189)
    on left: 81 82 83, on right: 76
addressable_spec (190)
    on left: 84 85 86 87 88 89 90, on right: 83 151
type_spec (191)
    on left: 91 92, on right: 77 149
vector_spec (192)
    on left: 93 94 95, on right: 92
scalar_type (193)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 113 114 115 116 117, on right: 91 92
initializer_list (194)
    on left: 118 119, on right: 64 119
literal_list (195)
    on left: 120 121, on right: 118 121
instruction_statement (196)
    on left: 122 123 124, on right: 46 48
instruction (197)
    on left: 126 127 128 129 130, on right: 122 124
$@12 (198)
    on left: 125, on right: 126
opcode_spec (199)
    on left: 132 133, on right: 126 127 128 129 130
$@13 (200)
    on left: 131, on right: 132
pred_spec (201)
    on left: 134 135 136 137 138 139 140 141 142 143 144 145 146, on right:
    124
option_list (202)
    on left: 147 148, on right: 132 148
option (203)
    on left: 149 150 151 152 153 154 155 156 157 158 159 160 161 162
    163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178
    179 180, on right: 147 148
atomic_operation_spec (204)
    on left: 181 182 183 184 185 186 187 188 189 190, on right: 171
rounding_mode (205)
    on left: 191 192, on right: 152
floating_point_rounding_mode (206)
    on left: 193 194 195 196, on right: 191
integer_rounding_mode (207)
    on left: 197 198 199 200, on right: 192
compare_spec (208)
    on left: 201 202 203 204 205 206 207 208 209 210 211 212 213 214
    215 216 217 218, on right: 150
operand_list (209)
    on left: 219 220, on right: 126 127 129 220
operand (210)
    on left: 221 222 223 224 225 226 227 228 229 230 231 232 233 234
    235 236 237 238 239 240, on right: 126 127 128 219 220
vector_operand (211)
    on left: 241 242 243 244, on right: 227 228 246
tex_operand (212)
    on left: 246, on right: 229
$@14 (213)
    on left: 245, on right: 246
builtin_operand (214)
    on left: 247 248, on right: 226
memory_operand (215)
    on left: 249 250 251 252 253, on right: 224 253
twin_operand (216)
    on left: 254 255 256 257 258 259 260, on right: 252
literal_operand (217)
    on left: 261 262 263, on right: 65 120 121 225 251
address_expression (218)
    on left: 264 265 266 267 268, on right: 249 250


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . directive_statement
    3      | input . function_defn
    4      | input . function_decl

    $end                    shift, and go to state 2
    ALIGN_DIRECTIVE         shift, and go to state 3
    CONST_DIRECTIVE         shift, and go to state 4
    CONSTPTR_DIRECTIVE      shift, and go to state 5
    ENTRY_DIRECTIVE         shift, and go to state 6
    EXTERN_DIRECTIVE        shift, and go to state 7
    FILE_DIRECTIVE          shift, and go to state 8
    FUNC_DIRECTIVE          shift, and go to state 9
    GLOBAL_DIRECTIVE        shift, and go to state 10
    LOCAL_DIRECTIVE         shift, and go to state 11
    LOC_DIRECTIVE           shift, and go to state 12
    MINNCTAPERSM_DIRECTIVE  shift, and go to state 13
    PARAM_DIRECTIVE         shift, and go to state 14
    PRAGMA_DIRECTIVE        shift, and go to state 15
    REG_DIRECTIVE           shift, and go to state 16
    SHARED_DIRECTIVE        shift, and go to state 17
    SREG_DIRECTIVE          shift, and go to state 18
    SURF_DIRECTIVE          shift, and go to state 19
    TARGET_DIRECTIVE        shift, and go to state 20
    TEX_DIRECTIVE           shift, and go to state 21
    VERSION_DIRECTIVE       shift, and go to state 22
    ADDRESS_SIZE_DIRECTIVE  shift, and go to state 23
    VISIBLE_DIRECTIVE       shift, and go to state 24
    S8_TYPE                 shift, and go to state 25
    S16_TYPE                shift, and go to state 26
    S32_TYPE                shift, and go to state 27
    S64_TYPE                shift, and go to state 28
    U8_TYPE                 shift, and go to state 29
    U16_TYPE                shift, and go to state 30
    U32_TYPE                shift, and go to state 31
    U64_TYPE                shift, and go to state 32
    F16_TYPE                shift, and go to state 33
    F32_TYPE                shift, and go to state 34
    F64_TYPE                shift, and go to state 35
    FF64_TYPE               shift, and go to state 36
    B8_TYPE                 shift, and go to state 37
    B16_TYPE                shift, and go to state 38
    B32_TYPE                shift, and go to state 39
    B64_TYPE                shift, and go to state 40
    BB64_TYPE               shift, and go to state 41
    BB128_TYPE              shift, and go to state 42
    PRED_TYPE               shift, and go to state 43
    TEXREF_TYPE             shift, and go to state 44
    SAMPLERREF_TYPE         shift, and go to state 45
    SURFREF_TYPE            shift, and go to state 46
    V2_TYPE                 shift, and go to state 47
    V3_TYPE                 shift, and go to state 48
    V4_TYPE                 shift, and go to state 49

    function_defn         go to state 50
    function_decl         go to state 51
    function_decl_header  go to state 52
    directive_statement   go to state 53
    variable_declaration  go to state 54
    variable_spec         go to state 55
    var_spec_list         go to state 56
    var_spec              go to state 57
    align_spec            go to state 58
    space_spec            go to state 59
    addressable_spec      go to state 60
    type_spec             go to state 61
    vector_spec           go to state 62
    scalar_type           go to state 63


state 2

    0 $accept: input $end .

    $default  accept


state 3

   80 align_spec: ALIGN_DIRECTIVE . INT_OPERAND

    INT_OPERAND  shift, and go to state 64


state 4

   84 addressable_spec: CONST_DIRECTIVE .

    $default  reduce using rule 84 (addressable_spec)


state 5

   66 variable_declaration: CONSTPTR_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

    IDENTIFIER  shift, and go to state 65


state 6

   25 function_decl_header: ENTRY_DIRECTIVE .

    $default  reduce using rule 25 (function_decl_header)


state 7

   28 function_decl_header: EXTERN_DIRECTIVE . FUNC_DIRECTIVE
   79 var_spec: EXTERN_DIRECTIVE .

    FUNC_DIRECTIVE  shift, and go to state 66

    $default  reduce using rule 79 (var_spec)


state 8

   58 directive_statement: FILE_DIRECTIVE . INT_OPERAND STRING

    INT_OPERAND  shift, and go to state 67


state 9

   26 function_decl_header: FUNC_DIRECTIVE .

    $default  reduce using rule 26 (function_decl_header)


state 10

   85 addressable_spec: GLOBAL_DIRECTIVE .

    $default  reduce using rule 85 (addressable_spec)


state 11

   86 addressable_spec: LOCAL_DIRECTIVE .

    $default  reduce using rule 86 (addressable_spec)


state 12

   59 directive_statement: LOC_DIRECTIVE . INT_OPERAND INT_OPERAND INT_OPERAND

    INT_OPERAND  shift, and go to state 68


state 13

   62 directive_statement: MINNCTAPERSM_DIRECTIVE . INT_OPERAND

    INT_OPERAND  shift, and go to state 69


state 14

   87 addressable_spec: PARAM_DIRECTIVE .

    $default  reduce using rule 87 (addressable_spec)


state 15

   60 directive_statement: PRAGMA_DIRECTIVE . STRING SEMI_COLON

    STRING  shift, and go to state 70


state 16

   81 space_spec: REG_DIRECTIVE .

    $default  reduce using rule 81 (space_spec)


state 17

   88 addressable_spec: SHARED_DIRECTIVE .

    $default  reduce using rule 88 (addressable_spec)


state 18

   82 space_spec: SREG_DIRECTIVE .

    $default  reduce using rule 82 (space_spec)


state 19

   89 addressable_spec: SURF_DIRECTIVE .

    $default  reduce using rule 89 (addressable_spec)


state 20

   55 directive_statement: TARGET_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER
   56                    | TARGET_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   57                    | TARGET_DIRECTIVE . IDENTIFIER

    IDENTIFIER  shift, and go to state 71


state 21

   90 addressable_spec: TEX_DIRECTIVE .

    $default  reduce using rule 90 (addressable_spec)


state 22

   52 directive_statement: VERSION_DIRECTIVE . DOUBLE_OPERAND
   53                    | VERSION_DIRECTIVE . DOUBLE_OPERAND PLUS

    DOUBLE_OPERAND  shift, and go to state 72


state 23

   54 directive_statement: ADDRESS_SIZE_DIRECTIVE . INT_OPERAND

    INT_OPERAND  shift, and go to state 73


state 24

   27 function_decl_header: VISIBLE_DIRECTIVE . FUNC_DIRECTIVE

    FUNC_DIRECTIVE  shift, and go to state 74


state 25

   96 scalar_type: S8_TYPE .

    $default  reduce using rule 96 (scalar_type)


state 26

   97 scalar_type: S16_TYPE .

    $default  reduce using rule 97 (scalar_type)


state 27

   98 scalar_type: S32_TYPE .

    $default  reduce using rule 98 (scalar_type)


state 28

   99 scalar_type: S64_TYPE .

    $default  reduce using rule 99 (scalar_type)


state 29

  100 scalar_type: U8_TYPE .

    $default  reduce using rule 100 (scalar_type)


state 30

  101 scalar_type: U16_TYPE .

    $default  reduce using rule 101 (scalar_type)


state 31

  102 scalar_type: U32_TYPE .

    $default  reduce using rule 102 (scalar_type)


state 32

  103 scalar_type: U64_TYPE .

    $default  reduce using rule 103 (scalar_type)


state 33

  104 scalar_type: F16_TYPE .

    $default  reduce using rule 104 (scalar_type)


state 34

  105 scalar_type: F32_TYPE .

    $default  reduce using rule 105 (scalar_type)


state 35

  106 scalar_type: F64_TYPE .

    $default  reduce using rule 106 (scalar_type)


state 36

  107 scalar_type: FF64_TYPE .

    $default  reduce using rule 107 (scalar_type)


state 37

  108 scalar_type: B8_TYPE .

    $default  reduce using rule 108 (scalar_type)


state 38

  109 scalar_type: B16_TYPE .

    $default  reduce using rule 109 (scalar_type)


state 39

  110 scalar_type: B32_TYPE .

    $default  reduce using rule 110 (scalar_type)


state 40

  111 scalar_type: B64_TYPE .

    $default  reduce using rule 111 (scalar_type)


state 41

  112 scalar_type: BB64_TYPE .

    $default  reduce using rule 112 (scalar_type)


state 42

  113 scalar_type: BB128_TYPE .

    $default  reduce using rule 113 (scalar_type)


state 43

  114 scalar_type: PRED_TYPE .

    $default  reduce using rule 114 (scalar_type)


state 44

  115 scalar_type: TEXREF_TYPE .

    $default  reduce using rule 115 (scalar_type)


state 45

  116 scalar_type: SAMPLERREF_TYPE .

    $default  reduce using rule 116 (scalar_type)


state 46

  117 scalar_type: SURFREF_TYPE .

    $default  reduce using rule 117 (scalar_type)


state 47

   93 vector_spec: V2_TYPE .

    $default  reduce using rule 93 (vector_spec)


state 48

   94 vector_spec: V3_TYPE .

    $default  reduce using rule 94 (vector_spec)


state 49

   95 vector_spec: V4_TYPE .

    $default  reduce using rule 95 (vector_spec)


state 50

    3 input: input function_defn .

    $default  reduce using rule 3 (input)


state 51

    4 input: input function_decl .
    6 function_defn: function_decl . $@1 statement_block
    9              | function_decl . $@2 block_spec_list $@3 statement_block
   61 directive_statement: function_decl . SEMI_COLON

    SEMI_COLON  shift, and go to state 75

    MAXNCTAPERSM_DIRECTIVE  reduce using rule 7 ($@2)
    MAXNTID_DIRECTIVE       reduce using rule 7 ($@2)
    MINNCTAPERSM_DIRECTIVE  reduce using rule 4 (input)
    MINNCTAPERSM_DIRECTIVE  [reduce using rule 7 ($@2)]
    LEFT_BRACE              reduce using rule 5 ($@1)
    $default                reduce using rule 4 (input)

    $@1  go to state 76
    $@2  go to state 77


state 52
